--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 		"phpunit/phpunit-mock-objects": ">=2.1",
 		"phpunit/php-code-coverage": ">=2.0",
 		"phpunit/phpunit": ">=4.1",
-		"squizlabs/php_codesniffer": ">=1.5"
+		"squizlabs/php_codesniffer": ">=1.5",
+		"guzzlehttp/guzzle": "~5.0"
 	},
 	"type": "library"
 }
