--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,10 @@
 	"license": "MIT",
 	"name": "kshabazz/interception",
 	"require": {
-		"php": ">=5.6.2"
+		"php": "~5"
 	},
 	"require-dev": {
-		"phpunit/phpunit-mock-objects": ">=2.1",
-		"phpunit/php-code-coverage": ">=2.0",
-		"phpunit/phpunit": ">=4.1",
-		"squizlabs/php_codesniffer": ">=1.5",
+		"phpunit/phpunit": "~4",
 		"guzzlehttp/guzzle": "~5.0"
 	},
 	"type": "library"
