--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	"license": "MIT",
 	"name": "kshabazz/interception",
 	"require": {
+		"psr/http-message": "^1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.1",
