--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
 		"psr/http-message": "^1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.1",
-		"guzzlehttp/guzzle": "~5.0"
+		"phpunit/phpunit": "^5.1",
+		"guzzlehttp/guzzle": "^6.0"
 	},
 	"type": "library"
 }
